@@ -28,7 +28,8 @@ class Admin::AssetsController < Admin::BaseController
     flash[:notice] = @assets.size == 1 ? "'#{CGI.escapeHTML @assets.first.title}' was uploaded." : "#{@assets.size} assets were uploaded."
     @assets.size.zero? ?  render(:action => 'new') : redirect_to(assets_path)
   rescue ActiveRecord::RecordInvalid
-    render(:action => 'new')
+    breakpoint
+    render :action => 'new'
   end
 
   def update
