@@ -21,7 +21,23 @@ class SiteDrop < BaseDrop
   def home_section
     find_section ''
   end
-  
+
+  def latest_articles(limit = nil)
+    return @articles if @articles && limit == @source.articles_per_page
+    articles = returning @source.articles.find_by_date(:limit => (limit || @source.articles_per_page)) do |articles|
+      articles.collect! &:to_liquid
+    end
+    limit == @source.articles_per_page ? (@articles = articles) : articles
+  end
+
+  def latest_comments(limit = nil)
+    return @comments if @comments && limit == @source.articles_per_page
+    comments = returning @source.comments.find(:all, :limit => (limit || @source.articles_per_page)) do |comments|
+      comments.collect! &:to_liquid
+    end
+    limit == @source.articles_per_page ? (@comments = comments) : comments
+  end
+
   def find_section(path)
     @section_index ||= {}
     return @section_index[path] if @section_index[path]
