@@ -130,12 +130,16 @@ module Filters
     @context['site'].find_child_sections(path)
   end
 
-  def latest_articles(section, limit = nil)
-    section.latest_articles(limit || section['articles_per_page'])
+  def latest_articles(site_or_section, limit = nil)
+    site_or_section.latest_articles(limit || site_or_section['articles_per_page'])
   end
 
   def latest_article(section)
     latest_articles(section, 1).first
+  end
+  
+  def latest_comments(site, limit = nil)
+    site.latest_comments(limit || site['articles_per_page'])
   end
 
   def assign_to(value, name)
