@@ -65,7 +65,8 @@ context "Drop Filters" do
   include Filters
 
   def setup
-    @context = {'site' => sites(:first).to_liquid, 'section' => sections(:about).to_liquid}
+    @site    = sites(:first).to_liquid
+    @context = {'site' => @site, 'section' => sections(:about).to_liquid}
   end
 
   specify "should find section by path" do
@@ -78,5 +79,15 @@ context "Drop Filters" do
     assert_models_equal [contents(:welcome), contents(:another)], latest_articles(section).collect(&:source)
     assert_models_equal [contents(:welcome), contents(:another)], latest_articles(section, 2).collect(&:source)
     assert_equal contents(:welcome), latest_article(section).source
+  end
+  
+  specify "should find latest articles by site" do
+    assert_models_equal [contents(:welcome), contents(:about), contents(:site_map), contents(:another)], latest_articles(@site).collect(&:source)
+    assert_models_equal [contents(:welcome), contents(:about)], latest_articles(@site, 2).collect(&:source)
+  end
+  
+  specify "should find latest comments by site" do
+    assert_models_equal [contents(:welcome_comment)], latest_comments(@site).collect(&:source)
+    assert_models_equal [contents(:welcome_comment)], latest_comments(@site, 1).collect(&:source)
   end
 end
